Fixes a bug where the panel heading does not expand on overflow

--- a/public/css/sb-admin.css
+++ b/public/css/sb-admin.css
@@ -310,3 +310,7 @@ table.dataTable thead .sorting:after {
 .show-grid {
     margin: 15px 0;
 }
+
+.panel-heading {
+    overflow: auto;
+}
